refactor(client): update all controllers to use specific API clients